src/less/styles.less
// Welcome to styles.less!

// includes

@import "http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700";
@import "/components/fortawesome-font-awesome/build/build.css";

// vars

@searchbar-height: 52px;
@searchinput-height: 32px;

@indigo: #3f51b5;
@pink: #e91e63;
@teal: #009688;
@orange: #ff5722;
@red: #e51c23;

@primary: @indigo;
@darker-primary: #26389B;
@accent: @pink;
@gray-lightest: #f4f4f4;
@gray-borders: #e4e4e4;

// styles

* {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
}

body, input, button, html {
  font-family: 'Roboto', sans-serif;
  font-size:14px;
}

body {
  margin-right: 10px;
}

span.it { font-style: italic; }

table { font-size:1em; }

.hide { display: none; }

#app { overflow: auto; }

.well {
  clear:both;
  margin:20px;
  padding: 12px;
  background: #fafafa;
  border-radius:2px;
}

a {
  transition: color 250ms ease-out;
  color:#00E;
  &:hover {
    color: lighten(#00E, 10%);
  }
}

.topBar(){
  display: block;
  position: absolute;
  background: @primary;
  box-shadow: 0 1px 1px 1px rgba(0,0,0,0.1);
  color:white;
  top:0;
  left:0;
  padding:0 10px 0 18px;
  line-height: @searchbar-height;
  height: @searchbar-height;
  width:100%;

  span.logo {
    display: inline-block;
    text-transform: uppercase;
    width:15%;
    text-align:left;
    font-weight: 600;
    font-size: 1em;
    line-height: 32px;
    a {
      color: white;
      text-decoration: none;
    }
  }
}

.linkBox() {
  position: fixed;
  bottom:15px;
  min-width:136px;
  right:0;
  color:#333;
  padding:4px 10px 4px 22px;
  font-size:12px;
  border:1px solid #cfcfcf;
  background: @gray-lightest;
  text-decoration: none;

  &:hover {background:darken(@gray-lightest, 5%);}

  &::before {
    position:absolute;
    left: 4px;
    top: 0;
    display:inline-block;
    width:100%;
    height: 100%;
    font-family: FontAwesome;
    content: "\f09b";
    font-size: 16px;
    line-height: 26px;
  }
}

#github-link {
  .linkBox();

}

#feedback-link {
  .linkBox();

  bottom:44px;

  &::before {
    content: "\f164";
    font-size: 14px;
    line-height: 24px;
  }

}


input[type="submit"],
button {
  background: white;
  border:1px solid @gray-borders;
  cursor: pointer;
  padding:4px;
  z-index:2;
  font-weight: 400;
  font-size:0.9em;
  border-radius:2px;
  outline: none;
  transition: box-shadow 250ms ease-out;

  -webkit-appearance: none;
  -webkit-border-radius:2px;

  &:hover {
    background: @gray-lightest;
  }

  &:active {
   box-shadow:inset 0 0 100px 100px rgba(0, 0, 0, 0.2);
  }

  &.primary {
    border:1px solid @accent;
    color: @accent;

    &:hover {
      background: @accent;
      color:white;
    }

    &:active {
      box-shadow:inset 0 0 100px 100px rgba(0, 0, 0, 0.3);
    }
  }

  &.flat {
    border:0;
    background:transparent;

  }
}
/* ... */

